hphp/test/zend/bad/ext/gd/tests/imagegammacorrect_error2.php
<?php
$image = tmpfile();
$gamma = imagegammacorrect($image, 1, 5);

?>